# eqntott

./: COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  ProjectHome.md  README  TAGS  config.status  configure  configure.ac  mklog
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile  Makefile.am  Makefile.in  eqntott.1
examples/: ex0.eqn  ex1.eqn  ex2.eqn  ex5.eqn  ex6.eqn  ex7.eqn  ex8.eqn  ex9.eqn
old/: Makefile  README
src/: Makefile  Makefile.am  Makefile.in  TAGS  bnode.c  canon.c  config.h  config.h.in  cover.c  duple.c  gram.y  hash.c  hdr.h  merge.c  misc.c  nt.c  preprocess.c  prexpr.c  procargs.c  pterm.c  pterm_ops.c  putpla.c  read_ones.c  reduce.c  rmcvd.c  substitute.c  version.c  x.c  x.h  y.tab.c  y.tab.h  yystuff.c
